# sn-79

./: .gitignore  FAQ.md  README.md  constraints.txt  install_miner.sh  install_simulator.sh  install_validator.sh  pyproject.toml  requirements.txt  run_gradients.sh  run_miner.sh  run_validator.sh  run_vast.sh  setup.py  vulture_whitelist.py
agents/: ArbitrageAgent.py  CustomTrainingAgent.py  DevAgent.py  FuturesAgent.py  ImbalanceAgent.py  MovingHurstAgent.py  OrderOptionAgent.py  RandomMakerAgent.py  RandomTakerAgent.py  RevengAgent.py  SLTPAgent.py  SelfTradingAgent.py  SimpleRegressorAgent.py
simulate/trading/: CMakeLists.txt  vcpkg.json
simulate/trading/run/: HighFrequencyTraderAgent.py  StylizedTraderAgent.py  Texifier.py  TraderLogger.py  TraderReporting.py
simulate/trading/run/config/: simulation_0.xml
simulate/trading/src/cpp/: CMakeLists.txt  Simulation.cpp  Simulation.hpp  TheSimulatorModule.cpp  main.cpp
simulate/trading/src/cpp/accounting/: Account.cpp  AccountRegistry.cpp  BalanceLogger.cpp  Balances.cpp
simulate/trading/src/cpp/accounting/include/taosim/accounting/: Account.hpp  AccountRegistry.hpp  BalanceLogger.hpp  Balances.hpp
simulate/trading/src/cpp/agent/: ALGOTraderAgent.cpp  ArbitrageTraderAgent.cpp  CMakeLists.txt  DistributedProxyAgent.cpp  FuturesTraderAgent.cpp  HighFrequencyTraderAgent.cpp  InitializationAgent.cpp  LocalAgentManager.cpp  LocalAgentManager.hpp  MultiBookExchangeAgent.cpp  MultiBookExchangeAgent.hpp  NoiseTraderAgent.cpp  OrderLogAgent.cpp  RandomTraderAgent.cpp  StylizedTraderAgent.cpp
simulate/trading/src/cpp/agent/include/taosim/agent/: ArbitrageTraderAgent.hpp  DistributedProxyAgent.hpp  FuturesTraderAgent.hpp  NoiseTraderAgent.hpp  StylizedTraderAgent.hpp
simulate/trading/src/cpp/book/: Book.cpp  BookProcessManager.cpp  FeeLogger.cpp  L2Logger.cpp  L3EventLogger.cpp
simulate/trading/src/cpp/book/include/taosim/book/: Book.hpp  BookProcessManager.hpp  FeeLogger.hpp  L3EventLogger.hpp  OrderContainer.hpp  TickContainer.hpp
simulate/trading/src/cpp/checkpoint/: CheckpointManager.cpp  helpers.cpp
simulate/trading/src/cpp/checkpoint/include/taosim/checkpoint/serialization/: helpers.hpp
simulate/trading/src/cpp/checkpoint/include/taosim/checkpoint/serialization/accounting/: Balances.hpp
simulate/trading/src/cpp/checkpoint/include/taosim/checkpoint/serialization/book/: Book.hpp
simulate/trading/src/cpp/checkpoint/include/taosim/checkpoint/serialization/matching/: ClearingManager.hpp  DynamicFeePolicy.hpp  ExchangeSignals.hpp  FeePolicyWrapper.hpp  SLTPContainer.hpp  TieredFeePolicy.hpp  helpers.hpp
simulate/trading/src/cpp/checkpoint/include/taosim/checkpoint/serialization/process/: FundamentalPrice.hpp
simulate/trading/src/cpp/decimal/include/taosim/decimal/: decimal.hpp
simulate/trading/src/cpp/dsa/include/taosim/dsa/: PriorityQueue.hpp
simulate/trading/src/cpp/event/include/taosim/event/serialization/: TradeEvent.hpp
simulate/trading/src/cpp/exchange/: CMakeLists.txt
simulate/trading/src/cpp/exchange/include/taosim/exchange/: Exchange.hpp
simulate/trading/src/cpp/fp/: CMakeLists.txt
simulate/trading/src/cpp/fp/include/taosim/fp/: fp.hpp
simulate/trading/src/cpp/ipc/: CMakeLists.txt  PosixMessageQueue.cpp
simulate/trading/src/cpp/ipc/include/taosim/ipc/: MsgPackChannel.hpp  PosixMessageQueue.hpp  ipc.hpp
simulate/trading/src/cpp/logging/: RotatingLoggerBase.cpp
simulate/trading/src/cpp/logging/include/taosim/logging/: RotatingLoggerBase.hpp
simulate/trading/src/cpp/matching/: CMakeLists.txt  ClearingManager.cpp  DynamicFeePolicy.cpp  ExchangeSignals.cpp  FeePolicyWrapper.cpp  OrderPlacementValidator.cpp  ReplayEventLogger.cpp  SLTPContainer.cpp  TieredFeePolicy.cpp
simulate/trading/src/cpp/matching/include/taosim/matching/: ClearingManager.hpp  DynamicFeePolicy.hpp  ExchangeSignals.hpp  FeePolicy.hpp  FeePolicyWrapper.hpp  Fees.hpp  OrderPlacementValidator.hpp  ReplayEventLogger.hpp  SLTPContainer.hpp  TieredFeePolicy.hpp  ZeroFeePolicy.hpp
simulate/trading/src/cpp/message/: ExchangeAgentMessagePayloads.cpp  MessageQueue.cpp
simulate/trading/src/cpp/message/include/taosim/message/: ExchangeAgentMessagePayloads.hpp  Message.hpp  MessageQueue.hpp
simulate/trading/src/cpp/net/: CMakeLists.txt  net.cpp  server.cpp
simulate/trading/src/cpp/net/include/taosim/net/: net.hpp  server.hpp
simulate/trading/src/cpp/process/: FundamentalPrice.cpp  MagneticField.cpp  ProcessFactory.cpp  helpers.cpp
simulate/trading/src/cpp/process/include/taosim/process/: FundamentalPrice.hpp  MagneticField.hpp  ProcessFactory.hpp  helpers.hpp
simulate/trading/src/cpp/serialization/: json_util.hpp
simulate/trading/src/cpp/serialization/include/taosim/serialization/msgpack/: common.hpp
simulate/trading/src/cpp/simulation/: CMakeLists.txt  SimulationManager.cpp
simulate/trading/src/cpp/simulation/include/taosim/simulation/: SharedResources.hpp  SimulationManager.hpp  helpers.hpp
simulate/trading/src/cpp/simulation/include/taosim/simulation/serialization/: ValidatorRequest.hpp
simulate/trading/src/cpp/util/: ClosePosition.hpp  FeeLogEvent.hpp  Order.cpp  Order.hpp  Trade.cpp  Trade.hpp
simulate/trading/src/cpp/util/include/taosim/util/: SLTPDebug.hpp
simulate/trading/src/cpp/xml/include/taosim/xml/: helpers.hpp
simulate/trading/test/cpp-tests/: CMakeLists.txt  LoanSettlementTests.cpp  QuoteBasedOrderTests.cpp  SLTPContainerTests.cpp  SelfTradePreventionTests.cpp  SpecialOrderTypeTests.cpp
simulate/trading/test/cpp-tests/accounting/: BalancesTests.cpp  FeesTests.cpp
simulate/trading/test/cpp-tests/data/: data_tool.py
simulate/trading/test/cpp-tests/fp/: BasicArithmeticTests.cpp  CMakeLists.txt
taos/: __init__.py
tests/: conftest.py  test_affinity.py  test_blacklist.py  test_external_poller.py  test_gradient_accept.py  test_load_fundamental.py  test_metagraph_worker.py  test_persistence.py  test_protocol.py  test_query_fanout.py  test_report_snapshot_collector.py  test_reward_floor.py  test_reward_kappa.py  test_scoring_shadow.py  test_set_weights.py  test_trade_fifo.py  (+1 more)
(+110 files in other folders)
